@@ -945,17 +945,19 @@ name|newBitArray
 expr_stmt|;
 name|ramBytesUsed
 operator|+=
-operator|(
-name|newSize
-operator|-
-name|bitArray
-operator|.
-name|length
-operator|)
-operator|*
 name|RamUsageEstimator
 operator|.
-name|NUM_BYTES_LONG
+name|sizeOf
+argument_list|(
+name|newBitArray
+argument_list|)
+operator|-
+name|RamUsageEstimator
+operator|.
+name|sizeOf
+argument_list|(
+name|bitArray
+argument_list|)
 expr_stmt|;
 block|}
 operator|++
